--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "cls && node index.js",
+    "dev": "cls && nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,11 +18,14 @@
     "@libp2p/upnp-nat": "^1.2.0",
     "@libp2p/webrtc": "^4.1.0",
     "blockstore-fs": "^1.1.10",
-    "datastore-fs": "^9.1.8",
+    "datastore-core": "^9.2.9",
     "debug": "^4.3.5",
     "express": "^4.19.2",
     "helia": "^4.2.4",
     "morgan": "^1.10.0",
     "multiformats": "^13.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
